fixed z-index for pop up modal

--- a/src/components/doctor-appointment-profile/doctor-profile-appointment-components/doctor-profile-appointment-calendar.scss
+++ b/src/components/doctor-appointment-profile/doctor-profile-appointment-components/doctor-profile-appointment-calendar.scss
@@ -73,7 +73,7 @@
 
   abbr {
     position: relative;
-    z-index: 100;
+    z-index: 10;
   }
 
   &:before {
@@ -161,7 +161,7 @@
 
   abbr {
     position: relative;
-    z-index: 100;
+    z-index: 10;
   }
 
   &:before {
